[tool.poetry]
	name = 'ender-stubs'
	version = '0.1.0'
	description = 'Various type stubs for many libraries commonly used by ENDERZOMBI102'
	authors = ['ENDERZOMBI102 <enderzombi102.end@gmail.com>']

[tool.poetry.dependencies]
	python = '^3.9'

[tool.poetry.dev-dependencies]

[build-system]
	requires = ['poetry-core>=1.0.0']
	build-backend = 'poetry.core.masonry.api'

